--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,8 @@
 ---
 import '../styles/global.css';
 // Component Imports
-import Button from '../components/Button.astro';
-
-// Full Astro Component Syntax:
-// https://docs.astro.build/basics/astro-components/
+import {Button} from '@/components/ui/button';
 ---
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
