--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@
 }
 
 .dark {
-  --background: hsl(222, 83%, 2%);
+  --background: hsl(228, 79%, 4%);
   --foreground: hsl(210 40% 98%);
   --card: hsl(222.2 84% 4.9%);
   --card-foreground: hsl(210 40% 98%);
@@ -117,6 +117,9 @@
 }
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   * {
     @apply border-border outline-ring/50;
   }
