set url for images

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Features from "@/components/blocks/features";
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/zeit-guard/logo.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>Zeit Guard</title>
   </head>
