add google html file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,10 @@ import Features from "@/components/blocks/features";
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/zeit-guard/logo.svg" />
+    <meta
+      name="google-site-verification"
+      content="-X3OLTM7SLLAYQcC3q2aUUNgOeYawZrCX7PAFuTtVF0"
+    />
     <meta name="generator" content={Astro.generator} />
     <title>Zeit Guard</title>
   </head>
